force-app/main/default/objects/LeadProduct__c/LeadProduct__c.object-meta.xml
<CustomObject>
    <description>Productos en los que tiene interés un candidato</description>
    <label>Interés en Producto</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nombre producto de interés</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interés en Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>