force-app/main/default/objects/LeadProduct__c/fields/Candidato__c.field-meta.xml
<CustomField>
    <fullName>Candidato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contiene la relación primaria a la entidad Candidato</description>
    <label>Candidato</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Interés en Productos</relationshipLabel>
    <relationshipName>Productos_de_Interes</relationshipName>
    <type>Lookup</type>
</CustomField>