force-app/main/default/objects/LeadProduct__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <description>Datos que se traen del formulario web cuando un candidato muestra interés en algún producto</description>
    <label>Comentarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>