force-app/main/default/objects/LeadProduct__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contiene la relación secundaria a la entidad Producto</description>
    <label>Producto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Interés en Productos</relationshipLabel>
    <relationshipName>Interes_en_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>