force-app/main/default/objects/LeadProduct__c/fields/ProductoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>ProductoPrincipal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si se marca se indicará que es el producto de principal interés</description>
    <inlineHelpText>Indica que es el producto de interés principal.</inlineHelpText>
    <label>Producto Principal</label>
    <type>Checkbox</type>
</CustomField>